--- a/css/style.css
+++ b/css/style.css
@@ -17,18 +17,24 @@ body {background-image: -webkit-linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%
     
 }
 .img1 {
+    background-image: url("../images/illustration-woman-online-mobile.svg");
     position: absolute;
+    background-repeat: no-repeat;
     top: -103px;
     left: 50px;
     width: 70%;
-    z-index: 1;
+    height: 171px;
 }
 .img2 {
+    background-image: url(../images/bg-pattern-mobile.svg);
+    background-repeat: no-repeat;
     position: absolute;
     left: 50px;
     top: 0px;
     width: 70%;
+    height: 106px;
 }
+.img3 {display: none;}
 
 .heading {
     padding-top: 60px;
@@ -41,9 +47,10 @@ body {background-image: -webkit-linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%
 }
 .box {
     color: hsl(240, 6%, 50%);
+    font-size: 13px;
     position: relative;
     width: 95%;
-    height: 50px;
+    height: 49px;
     border-bottom: 1px solid hsl(240, 5%, 91%);
     overflow: hidden;
 }
@@ -68,3 +75,62 @@ body {background-image: -webkit-linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%
     height: auto;
 }
 .fontcolor {color: hsl(238, 29%, 16%); font-weight: bold;}
+
+@media only screen and (min-width: 385px){
+    .maincont {
+        display: grid;
+        grid-template-areas: "images heading" "images boxes";
+        padding-top: 0%;
+    }
+
+    .images {
+        grid-area: images;
+        overflow: hidden;
+        position: relative;
+    }
+    .heading { 
+            grid-area: heading;
+            justify-self: left;
+            margin-left: 140px;
+             }
+    .contbox { 
+        grid-area: boxes;
+        width: 66%;
+    }
+    .box > p {width: 65%;}
+    .img1{
+        position: relative; 
+        background-image: url("../images/illustration-woman-online-desktop.svg"); 
+        left: -86px;
+        top: 80px;
+        background-repeat: no-repeat;
+        width: 480px;
+        height: 349px;
+        background-size: contain;
+        z-index: 1;
+    }
+    .img2 {
+        position: absolute; 
+        top: -305px;
+        left: -590px; 
+        background-image: url("../images/bg-pattern-desktop.svg"); 
+        background-repeat: no-repeat;
+        width: 990px;
+        height: 962px;
+        background-size: contain;
+        z-index: 0;
+    }
+    .img3 {
+        background-image: url("../images/illustration-box-desktop.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+        display: block;
+        width: 190px;
+        height: 190px;
+        z-index: 2;
+        top: 209px;
+        left: -95px;
+    }
+    
+}
